# django-avishan

./: MANIFEST.in  README.md  README.rst  admin.py  decorators.py  exceptions.py  middlewares.py  models.py  requirements.txt  setup.cfg  setup.py  views.py
avishan/: LICENSE  __init__.py  admin.py  apps.py  avishan_config.py  decorators.py  deploy.sh  descriptor.py  exceptions.py  forms.py  middlewares.py  models.py  models_extensions.py  models_old.py  requirements.txt  tasks.py  test.py  tests.py  todoes.py  urls.py  utils.py  views.py
avishan/configure/: __init__.py
avishan/deploy/: celery-beat  gunicorn.service  nginx
avishan/libraries/admin_lte/: classes.py  model.py
avishan/libraries/chayi/: __init__.py
avishan/libraries/config_parser/: __init__.py
avishan/libraries/dbml/: __init__.py
avishan/libraries/faker/: __init__.py  providers.py
avishan/libraries/firebase/: __init__.py
avishan/libraries/kavenegar/: __init__.py
avishan/libraries/mailgun/: functions.py
avishan/libraries/neshan/: __init__.py
avishan/libraries/openapi3/: __init__.py  classes.py  descriptor.py  openapi (1).json  openapi.json  openapi.yaml  rebuild.py  redoc.html
avishan/migrations/: 0001_initial.py  0002_requesttrack_view_name.py  0002_translatablechar.py  0002_usergroup_token_valid_seconds.py  0003_auto_20191029_1223.py  0003_auto_20191220_2004.py  0003_requesttrackexecinfo.py  0004_accessrule_crud_type.py  0004_auto_20191031_0029.py  0004_usergroup_authenticate_with_phone_otp.py  0005_auto_20190818_0336.py  0005_baseuser_language.py  0005_delete_userdevice.py  0006_auto_20190902_1801.py  0006_auto_20191126_2347.py  0006_auto_20200219_0421.py  0007_visitorkey.py  0008_auto_20190905_1748.py  0008_auto_20200312_1444.py  0009_auto_20190911_1929.py  0009_auto_20200331_2041.py  0010_auto_20200401_1452.py  0011_auto_20200526_1740.py  0011_remove_exceptionrecord_datetime.py  0012_delete_requesttrackexecinfo.py  0013_auto_20200622_1536.py  0014_auto_20200625_1319.py  0015_auto_20200724_1419.py  0016_auto_20200726_1113.py  0017_auto_20200801_1907.py  0018_auto_20200802_1619.py  0019_auto_20200803_0412.py  0020_auto_20200803_1702.py  0021_auto_20200815_1652.py  0021_auto_20200815_1702.py  0022_city_province.py
avishan/misc/: __init__.py  bch_datetime.py  requirements.txt  status.py  todoes.py  translation.py
avishan/models/: __init__.py  authentication.py  base.py  users.py
avishan/static/: on-install-log.txt  package-lock.json
avishan/templates/: swagger.html
avishan/templatetags/: avishan_tags.py
avishan/third_party_packages/: d3-mitch-tree.py  kavenegar.py
avishan/utils/: auth_functions.py  data_functions.py  model_functions.py  phone_opt_functions.py  validator_functions.py
avishan/views/: class_based.py  function_based.py  models.py  panel_views.py
django_avishan.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
management/commands/: __init__.py  avishan_init.py  sample.py
migrations/: 0002_activationcode_user_group.py
utils/: data_functions.py  documentation_functions.py
(+76 files in other folders)
