[metadata]
name = django-avishan
version = 0.6.0
description = Avishan is now a framework on top of drf
long_description = file: README.rst
url = https://github.com/afshari9978/django-avishan
author = Morteza Afshari
author_email = afshari9978@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
install_requires =
    Django>=3.1.0
    djangorestframework==3.12.2


packages = find:
