[metadata]
name = django-avishan
version = 0.5.33
description = Avishan is just an set of tools
long_description = file: README.rst
url = https://gitlab.com/afshari9978/avishan
author = Morteza Afshari
author_email = afshari9978@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
install_requires =
    bcrypt>=3.1.7
    colour>=0.1.5
    Django>=3.0.7
    django-anymail[sendgrid]>=7.2.1
    django-cors-headers>=3.2.1
    django-crum>=0.7.8
    django-filter>=2.3.0
    django-money>=1.3
    docstring-parser>=0.7.1
    Faker>=4.0.3
    Khayyam>=3.0.17
    haversine>=2.2.0
    gunicorn>=20.0.4
    Pillow>=7.1.0
    PyJWT==1.7.1
    PyYAML>=5.3.1
    pytest>=6.1.2
    requests>=2.22.0
    schemathesis>=2.8.4
    stringcase>=1.2.0


packages = find:
